# app/Http/Requests/CheckoutTicketRequest.php
@@ -1,0 +1,23 @@
+<?php
+
+namespace App\Http\Requests;
+
+/**
+ * @OA\Schema(
+ *     schema="CheckoutTicketRequest"
+ * )
+ */
+class CheckoutTicketRequest
+{
+    /**
+     * @OA\Property()
+     * @var int
+     * */
+    public $ticketId;
+
+    /**
+     * @OA\Property()
+     * @var int
+     * */
+    public $qty;
+}
