# app/Models/OrderHistory.php
@@ -2,14 +2,14 @@
 
 namespace App\Models;
 
-class Order extends BaseModel
+class OrderHistory extends BaseModel
 {
     /**
      * The table associated with the model.
      *
      * @var string
      */
-    protected $table = 'orders';
+    protected $table = 'order_history';
 
     /**
      * The attributes that are mass assignable.
@@ -17,21 +17,10 @@ class Order extends BaseModel
      * @var array
      */
     protected $fillable = [
-        'invoice',
         'order_id',
         'transaction_id',
         'payment_method_id',
         'status',
-        'first_name',
-        'last_name',
-        'email',
-        'phone_number',
-        'gender',
         'data',
     ];
-
-    public function detail()
-    {
-        return $this->hasMany(OrderDetail::class, 'order_id', 'id');
-    }
 }
